...
        } else {
            TabView {
                Tab("Friends", systemImage: "person.3.fill"){
                    FriendsView()
                }
                
                Tab("Challenges", systemImage: "tray.and.arrow.up.fill"){
                    ChallengesView()
                }
                
                Tab("Account", systemImage: "person.crop.circle"){
                    AccountView(session: $session, account: $account)
                }
...
